# StructVis

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml  requirements.txt  structvis.spec
structvis/: app.py
structvis/core/: flovis_import.py  geometry.py  i18n.py  loads.py  mass.py  materials.py  mesher.py  naca.py  optimize.py  project.py  settings.py  simvis_export.py  wingbox.py
structvis/core/ai/: review.py
structvis/core/fea/: binaries.py  ccx_runner.py  ccx_writer.py  frd_parser.py  result.py
structvis/core/report/: charts.py  pdf_report.py  summary.py
structvis/ui/: dialogs.py  effects.py  main_window.py  simvis_export_dialog.py  theme.py
structvis/ui/tabs/: analysis_tab.py  import_tab.py  report_tab.py  results_tab.py  review_tab.py  structure_tab.py
structvis/ui/widgets/: param_slider.py  wingbox_view.py  worker.py
tests/: conftest.py  test_buckling_ortho.py  test_fea_pipeline.py  test_fea_writer.py  test_fsd.py  test_import.py  test_loads.py  test_mass.py  test_mesher.py  test_optimize_project.py  test_physics_upgrades.py  test_report.py  test_settings.py  test_simvis_export.py  test_two_materials.py  test_ui_smoke.py
