[project]
name = "structvis"
version = "1.0.0"
description = "StructVis - parametric wingbox generator and FEA stress viewer for Flovis models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Lucas" }]
keywords = ["fea", "calculix", "wingbox", "structures", "aerospace", "model-aircraft"]
dependencies = [
    "PySide6>=6.6",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "pyqtgraph>=0.13",
    "numpy>=1.26",
    "scipy>=1.11",
    "reportlab>=4.0",
    "matplotlib>=3.8",
    "ollama>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]
vlm = ["aerosandbox>=4.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["structvis*"]

[project.gui-scripts]
structvis = "structvis.app:main"
